<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainLayout"
    tools:context=".MainActivity">

    <!--네이버 지도-->
    <fragment
        android:id="@+id/naverMap"
        android:name="com.naver.maps.map.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!--드론 로그 뷰-->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/droneLog"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="10dp"
        android:layout_width="450dp"
        android:layout_height="250dp" />

    <!--드론 상태바-->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        app:cardBackgroundColor="#9A000000">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="지적편집도"
            android:textColor="#ffffff"/>

        <Spinner
            android:id="@+id/selectConnectionType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:layout_marginRight="90dp"
            android:layout_toLeftOf="@+id/btnConnect"
            android:entries="@array/drone_connection_types"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:spinnerMode="dropdown"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:theme="@style/AppTheme.AppBarOverlay" />

        <Button
            android:id="@+id/btnConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:backgroundTint="#00FFFFFF"
            android:onClick="onBtnConnectTap"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="Connect"
            android:textColor="#ffffff"
            android:fontFamily="@font/fontstyles" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TableLayout
                android:id="@+id/statebar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TableRow
                    android:id="@+id/statebarRow"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:id="@+id/voltageLabelTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="전압: "
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#ffffff"
                        android:fontFamily="@font/fontstyles" />

                    <TextView
                        android:id="@+id/voltageValueTextView"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="0V"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#ffffff"
                        android:fontFamily="@font/fontstyles" />

                    <TextView
                        android:id="@+id/modeLabelTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="비행모드: "
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#ffffff"
                        android:fontFamily="@font/fontstyles" />

                    <Spinner
                        android:id="@+id/modeSelect"
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:layout_toLeftOf="@+id/btnConnect"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:spinnerMode="dropdown"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:theme="@style/AppTheme.AppBarOverlay" />

                    <TextView
                        android:id="@+id/altitudeLabelTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="고도: "
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#ffffff"
                        android:fontFamily="@font/fontstyles" />

                    <TextView
                        android:id="@+id/altitudeValueTextView"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="0m"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#ffffff"
                        android:fontFamily="@font/fontstyles" />

                    <TextView
                        android:id="@+id/speedLabelTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="속도: "
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#ffffff"
                        android:fontFamily="@font/fontstyles" />

                    <TextView
                        android:id="@+id/speedValueTextView"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="0m/s"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#ffffff"
                        android:fontFamily="@font/fontstyles" />

                    <TextView
                        android:id="@+id/YAWLabelTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="YAW: "
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#ffffff"
                        android:fontFamily="@font/fontstyles" />

                    <TextView
                        android:id="@+id/YAWValueTextView"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="0deg"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#ffffff"
                        android:fontFamily="@font/fontstyles" />

                    <TextView
                        android:id="@+id/gpsLabelTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="위성: "
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#ffffff"
                        android:fontFamily="@font/fontstyles" />

                    <TextView
                        android:id="@+id/gpsValueTextView"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="0"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#ffffff"
                        android:fontFamily="@font/fontstyles" />
                </TableRow>
            </TableLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <!--드론 기능-->
    <LinearLayout
        android:id="@+id/layoutARM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="15dp"
        android:visibility="invisible" >
        <Button
            android:id="@+id/btnArmTakeOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_bottom_button_style"
            android:backgroundTint="#FF7CB5DB"
            android:text="@string/vehicle_arm"
            android:textSize="20dp"
            android:textColor="#ffffff"
            android:fontFamily="@font/fontstyles"
            android:onClick="onArmButtonTap" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/ic_bottom_button_style"
            android:backgroundTint="#FF7CB5DB"
            android:text="@string/overlay_clear"
            android:textSize="20dp"
            android:textColor="#ffffff"
            android:fontFamily="@font/fontstyles"
            android:onClick="onClearButtonTap" />

        <Button
            android:id="@+id/btnMapMove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/ic_bottom_button_style"
            android:backgroundTint="#FF7CB5DB"
            android:text="@string/map_lock"
            android:textSize="20dp"
            android:textColor="#ffffff"
            android:fontFamily="@font/fontstyles"
            android:onClick="onMapMoveButtonTap" />
    </LinearLayout>

    <!--드론 비행 세팅-->
    <LinearLayout
        android:id="@+id/layoutDroneAttribute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="60dp"
        android:layout_marginRight="15sp"
        android:orientation="horizontal"
        android:visibility="invisible" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnABDistance"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="@string/mission_set_ab_distance"
                android:textSize="15dp"
                android:textColor="#ffffff"
                android:fontFamily="@font/fontstyles"
                android:onClick="onABDistanceTap" />

            <Button
                android:id="@+id/btnUpDistance"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="@string/mission_up_ab_distance"
                android:textSize="15dp"
                android:visibility="gone"
                android:onClick="onSetABDistanceTap" />

            <Button
                android:id="@+id/btnDownDistance"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="@string/mission_down_ab_distance"
                android:textSize="15dp"
                android:textColor="#ffffff"
                android:fontFamily="@font/fontstyles"
                android:visibility="gone"
                android:onClick="onSetABDistanceTap" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnFlightWidth"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="비행폭"
                android:textSize="15dp"
                android:textColor="#ffffff"
                android:fontFamily="@font/fontstyles"
                android:onClick="onBtnFlightWidthTap" />

            <Button
                android:id="@+id/btnUpWidth"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="+ 0.5"
                android:textSize="15dp"
                android:textColor="#ffffff"
                android:fontFamily="@font/fontstyles"
                android:visibility="gone"
                android:onClick="onBtnSetFlightWidthTap" />

            <Button
                android:id="@+id/btnDownWidth"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="- 0.5"
                android:textSize="15dp"
                android:textColor="#ffffff"
                android:fontFamily="@font/fontstyles"
                android:visibility="gone"
                android:onClick="onBtnSetFlightWidthTap" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnTakeOffAltitude"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:textSize="15dp"
                android:textColor="#ffffff"
                android:fontFamily="@font/fontstyles"
                android:onClick="onBtnTakeOffAltitudeTap" />

            <Button
                android:id="@+id/btnUpAltitude"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="+ 0.5"
                android:textSize="15dp"
                android:textColor="#ffffff"
                android:fontFamily="@font/fontstyles"
                android:onClick="onBtnSetAltitudeTap"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnDownAltitude"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="- 0.5"
                android:textSize="15dp"
                android:textColor="#ffffff"
                android:fontFamily="@font/fontstyles"
                android:onClick="onBtnSetAltitudeTap"
                android:visibility="gone" />
        </LinearLayout>

        <Button
            android:id="@+id/btnMission"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text="@string/mission_set_ab_position"
            android:textSize="15dp"
            android:textColor="#ffffff"
            android:fontFamily="@font/fontstyles" />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabBasic"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="10dp"
        android:visibility="invisible"
        app:backgroundTint="#FFFFFF"
        app:elevation="6dp"
        app:fabSize="auto"
        app:pressedTranslationZ="12dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabNavi"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="58dp"
        android:visibility="invisible"
        app:backgroundTint="#FFFFFF"
        app:elevation="6dp"
        app:fabSize="auto"
        app:pressedTranslationZ="12dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabSatellite"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="100dp"
        android:visibility="invisible"
        app:backgroundTint="#FFFFFF"
        app:elevation="6dp"
        app:fabSize="auto"
        app:pressedTranslationZ="12dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabHybrid"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="52sp"
        android:layout_marginBottom="130dp"
        android:visibility="invisible"
        app:backgroundTint="#FFFFFF"
        app:elevation="6dp"
        app:fabSize="auto"
        app:pressedTranslationZ="12dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabTerrain"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="150dp"
        android:visibility="invisible"
        app:backgroundTint="#FFFFFF"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="15sp"
        android:src="@drawable/ic_fab_main"
        app:backgroundTint="#7CB5DB" />
</android.support.design.widget.CoordinatorLayout>